# ai-document-intelligence

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
backend/agents/: nlp_agent.py  orchestrator_agent.py  rag_agent.py  vision_agent.py
backend/api/: ingestion_service.py  main.py
backend/core/: config.py  db.py  embedding_client.py  llm_client.py  logging.py  models.py
backend/pipelines/: embedding_pipeline.py  ingestion_pipeline.py  ocr_pipeline.py  retrieval_pipeline.py
data/sample_docs/: financial_report_ru.txt  legal_contract_en.txt  load_samples.py  technical_spec_en.txt
docs/: api-reference.md  architecture.md  deployment.md
eval/: evaluate.py
examples/: agent_pipeline.py  basic_rag_query.py  batch_ingestion.py
frontend/: app.py
tests/: conftest.py  test_agents.py  test_nlp.py  test_rag.py
